# mycode

./: .gitignore  CHANGELOG.md  MANIFEST.in  NOTICE  README.md  conftest.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
.mycode/: config.toml
clients/web/: index.html  package-lock.json  package.json  vite.config.ts
clients/web/e2e/: visual-qa.mjs
clients/web/src/: App.test.tsx  App.tsx  CodeViewer.tsx  FileTree.test.tsx  FileTree.tsx  ModelSettingsDialog.test.tsx  ModelSettingsDialog.tsx  RunInspector.test.tsx  RunInspector.tsx  protocol.ts  rpc.test.ts  rpc.ts  state.test.ts  state.ts  styles.css
docs/: CODE_INTELLIGENCE.md  CURRENT_ARCHITECTURE.md  MODEL_PROFILES.md  NEXT_ROADMAP.md  P13_P14_VALIDATION.md  PROJECT_STATUS.md  REAL_MODEL_EVALS.md  RESUME_PLAN.md  TECH_DEBT.md  WEB_WORKBENCH.md
editors/vscode/: .vscodeignore  CHANGELOG.md  LICENSE  README.md  esbuild.mjs  package-lock.json  package.json  tsconfig.json  vitest.config.ts
editors/vscode/src/: client.ts  extension.ts  protocol.test.ts  protocol.ts
evals/cases/: canonical.py
schemas/: protocol-v1.json
scripts/: benchmark_codeintel.py  smoke_llm.py
src/mycode/: __init__.py  __main__.py  approvals.py  catalog.py  checkpoint.py  cli.py  commands.py  config.py  context.py  git_ops.py  logging_config.py  mentions.py  model_store.py  permissions.py  persistence.py  pricing.py  prompts.py  runtime.py  session.py  trace.py  trace_otel.py  ui.py
src/mycode/agent/: __init__.py  events.py  loop.py  planning.py  runner.py
src/mycode/codeintel/: __init__.py  context.py  index.py  lsp.py  models.py  service.py  tools.py
src/mycode/data/: __init__.py  model_catalog-v1.json
src/mycode/evals/: __init__.py  baseline.py  cli.py  fakes.py  live_loader.py  live_runner.py  live_types.py  loader.py  runner.py  scorers.py  types.py
src/mycode/llm/: __init__.py  anthropic.py  base.py  kimi.py  openai_compatible.py
src/mycode/mcp/: __init__.py  client.py  config.py  registry.py  types.py
src/mycode/plugins/: __init__.py
src/mycode/server/: __init__.py  protocol.py  session.py  stdio.py  workspace.py
src/mycode/skills/: __init__.py
src/mycode/tools/: __init__.py  _common.py  files.py  git.py  registry.py  (+2 more)
tests/: conftest.py  fakes.py  lsp_test_server.py  mcp_test_server.py  test_agent.py  test_anthropic.py  test_approvals.py  test_catalog.py  test_checkpoint.py  test_cli.py  test_codeintel.py  test_config.py  test_context.py  test_evals.py  test_git_ops.py  test_kimi_provider.py  test_live_evals.py  test_llm.py  test_llm_live.py  test_logging_config.py  test_loop.py  test_mcp.py  test_mentions.py  test_models.py  test_permissions.py  test_planning.py  test_plugins.py  test_pricing.py  test_prompts.py  test_provider_registry.py  test_release.py  test_runner.py  test_runtime.py  test_server.py  test_server_extensions.py  test_session.py  test_shell.py  test_skills.py  test_tools.py  test_trace.py  (+7 more)
(+134 files in other folders)
